Sleep timer belongs to zone station not unit control

--- a/MyAir3Api/MyAir3Api.csproj
+++ b/MyAir3Api/MyAir3Api.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedule.cs" />
     <Compile Include="ScheduledDay.cs" />
+    <Compile Include="SleepTimerStatus.cs" />
     <Compile Include="UnitControl.cs" />
     <Compile Include="SleepTimer.cs" />
     <Compile Include="Zone.cs" />
