Promoted common aircon functions to the ZoneStation and moved less freuqently used system information to a child SystemInfo object

--- a/MyAir3Api/MyAir3Api.csproj
+++ b/MyAir3Api/MyAir3Api.csproj
@@ -52,11 +52,12 @@
     <Compile Include="Schedule.cs" />
     <Compile Include="ScheduledDay.cs" />
     <Compile Include="SleepTimerStatus.cs" />
-    <Compile Include="UnitControl.cs" />
+    <Compile Include="SystemInfo.cs" />
     <Compile Include="SleepTimer.cs" />
     <Compile Include="Zone.cs" />
     <Compile Include="ZoneStation.cs" />
     <Compile Include="ZoneStatus.cs" />
+    <Compile Include="Zs103TechSettings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
