--- a/MFMyAir3Api/MFMyAir3Api.csproj
+++ b/MFMyAir3Api/MFMyAir3Api.csproj
@@ -37,9 +37,11 @@
     <Compile Include="IAirconWebClient.cs" />
     <Compile Include="InverterMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemInfo.cs" />
     <Compile Include="XElement.cs" />
     <Compile Include="XmlReaderEx.cs" />
     <Compile Include="ZoneStation.cs" />
+    <Compile Include="Zs103TechSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Http" />
