--- a/MFMyAir3Api/MFMyAir3Api.csproj
+++ b/MFMyAir3Api/MFMyAir3Api.csproj
@@ -38,6 +38,8 @@
     <Compile Include="IAirconWebClient.cs" />
     <Compile Include="InverterMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schedule.cs" />
+    <Compile Include="ScheduledDay.cs" />
     <Compile Include="SleepTimer.cs" />
     <Compile Include="SleepTimerStatus.cs" />
     <Compile Include="SystemInfo.cs" />
@@ -45,6 +47,7 @@
     <Compile Include="XmlReaderEx.cs" />
     <Compile Include="Zone.cs" />
     <Compile Include="ZoneStation.cs" />
+    <Compile Include="ZoneStatus.cs" />
     <Compile Include="Zs103TechSettings.cs" />
   </ItemGroup>
   <ItemGroup>
