Workaround limitations in using StreamReader for webrequests on Netduino
Introduce 5000ms timeout for web requests (due to no DNS lookup requests on LAN)

--- a/MFMyAir3Api/MFMyAir3Api.csproj
+++ b/MFMyAir3Api/MFMyAir3Api.csproj
@@ -42,6 +42,7 @@
     <Compile Include="ScheduledDay.cs" />
     <Compile Include="SleepTimer.cs" />
     <Compile Include="SleepTimerStatus.cs" />
+    <Compile Include="StreamEx.cs" />
     <Compile Include="SystemInfo.cs" />
     <Compile Include="XElement.cs" />
     <Compile Include="XmlReaderEx.cs" />
