--- a/MFMyAir3Api/MFMyAir3Api.csproj
+++ b/MFMyAir3Api/MFMyAir3Api.csproj
@@ -33,6 +33,7 @@
     <Compile Include="AirconWebClient.cs" />
     <Compile Include="AirconWebResponse.cs" />
     <Compile Include="AuthenticatedAirconWebClient.cs" />
+    <Compile Include="CharEx.cs" />
     <Compile Include="FanSpeed.cs" />
     <Compile Include="HttpUtility.cs" />
     <Compile Include="IAirconWebClient.cs" />
@@ -40,12 +41,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedule.cs" />
     <Compile Include="ScheduledDay.cs" />
+    <Compile Include="SimpleXmlReader.cs" />
     <Compile Include="SleepTimer.cs" />
     <Compile Include="SleepTimerStatus.cs" />
     <Compile Include="StreamEx.cs" />
     <Compile Include="SystemInfo.cs" />
     <Compile Include="XElement.cs" />
-    <Compile Include="XmlReaderEx.cs" />
     <Compile Include="Zone.cs" />
     <Compile Include="ZoneStation.cs" />
     <Compile Include="ZoneStatus.cs" />
@@ -53,8 +54,6 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Http" />
-    <Reference Include="System.IO" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <Import Condition="EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <Import Condition="!EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
