--- a/MyAir3Api/MyAir3Api.csproj
+++ b/MyAir3Api/MyAir3Api.csproj
@@ -42,18 +42,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aircon.cs" />
+    <Compile Include="AirconLocater.cs" />
     <Compile Include="AirconWebClient.cs" />
     <Compile Include="AirconWebResponse.cs" />
     <Compile Include="AuthenticatedAirconWebClient.cs" />
     <Compile Include="FanSpeed.cs" />
     <Compile Include="IAirconWebClient.cs" />
     <Compile Include="InverterMode.cs" />
+    <Compile Include="IUdpIdentifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedule.cs" />
     <Compile Include="ScheduledDay.cs" />
     <Compile Include="SleepTimerStatus.cs" />
     <Compile Include="SystemInfo.cs" />
     <Compile Include="SleepTimer.cs" />
+    <Compile Include="UdpIdentifier.cs" />
     <Compile Include="Zone.cs" />
     <Compile Include="ZoneStation.cs" />
     <Compile Include="ZoneStatus.cs" />
