--- a/MFMyAir3Api/MFMyAir3Api.csproj
+++ b/MFMyAir3Api/MFMyAir3Api.csproj
@@ -30,6 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Aircon.cs" />
+    <Compile Include="AirconLocater.cs" />
     <Compile Include="AirconWebClient.cs" />
     <Compile Include="AirconWebResponse.cs" />
     <Compile Include="AuthenticatedAirconWebClient.cs" />
@@ -38,6 +39,8 @@
     <Compile Include="HttpUtility.cs" />
     <Compile Include="IAirconWebClient.cs" />
     <Compile Include="InverterMode.cs" />
+    <Compile Include="IUdpIdentifier.cs" />
+    <Compile Include="NetworkInterfaceEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedule.cs" />
     <Compile Include="ScheduledDay.cs" />
@@ -46,6 +49,7 @@
     <Compile Include="SleepTimerStatus.cs" />
     <Compile Include="StreamEx.cs" />
     <Compile Include="SystemInfo.cs" />
+    <Compile Include="UdpIdentifier.cs" />
     <Compile Include="XElement.cs" />
     <Compile Include="Zone.cs" />
     <Compile Include="ZoneStation.cs" />
@@ -53,6 +57,8 @@
     <Compile Include="Zs103TechSettings.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.SPOT.Net" />
+    <Reference Include="System" />
     <Reference Include="System.Http" />
   </ItemGroup>
   <Import Condition="EXISTS('$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets')" Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
