--- a/MFTests/MFTests.csproj
+++ b/MFTests/MFTests.csproj
@@ -32,6 +32,7 @@
     <StartupObject>Winkler.MFMyAir3Api.Tests.TestProgram</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AirconLocaterTests.cs" />
     <Compile Include="ScheduleTests.cs" />
     <Compile Include="ZoneStationTests.cs" />
     <Compile Include="AirconWebResponseTests.cs" />
