--- a/Scripts/MyAir3Api.nuspec
+++ b/Scripts/MyAir3Api.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>MyAir3Api</id>
-        <version>1.0.0.2</version>
+        <version>1.1.0-uap</version>
         <title>MyAir3 API</title>
         <authors>Eric Winkler</authors>
         <owners>Copyright (C) 2014 Eric Winkler</owners>
@@ -14,11 +14,5 @@
         <copyright>Copyright (C) 2014 Eric Winkler.</copyright>
         <language />
         <tags>C# MyAir AdvantageAir MF micro</tags>
-        <dependencies>
-            <group targetFramework=".NETFramework4.5">
-            </group>
-            <group targetFramework=".NETMicroFramework4.3">
-            </group>
-        </dependencies>
     </metadata>
 </package>
