--- a/Scripts/MyAir3Api.nuspec
+++ b/Scripts/MyAir3Api.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>MyAir3Api</id>
-        <version>1.1.0-uap</version>
+        <version>1.2.0</version>
         <title>MyAir3 API</title>
         <authors>Eric Winkler</authors>
         <owners>Copyright (C) 2014 Eric Winkler</owners>
@@ -14,5 +14,21 @@
         <copyright>Copyright (C) 2014 Eric Winkler.</copyright>
         <language />
         <tags>C# MyAir AdvantageAir MF micro</tags>
+        <dependencies>
+          <group targetFramework=".NETStandard1.0">
+            <dependency id="System.Collections" version="4.0.10.0"/>
+            <dependency id="System.Diagnostics.Debug" version="4.0.10.0"/>
+            <dependency id="System.Linq" version="4.0.0.0"/>
+            <dependency id="System.Net.Primitives" version="4.0.10.0"/>
+            <dependency id="System.Net.Sockets" version="4.1.0.0"/>
+            <dependency id="System.Net.Http" version="4.1.0.0"/>
+            <dependency id="System.Runtime" version="4.0.20.0"/>
+            <dependency id="System.Runtime.Extensions" version="4.0.10.0"/>
+            <dependency id="System.Runtime.InteropServices" version="4.0.20.0"/>
+            <dependency id="System.Text.Encoding" version="4.0.10.0"/>
+            <dependency id="System.Threading.Tasks" version="4.0.10.0"/>
+            <dependency id="System.Xml.XDocument" version="4.0.10.0"/>
+          </group>
+        </dependencies>
     </metadata>
 </package>
